# bazar-pos

./: .env.example  .gitignore  .vercelignore  drizzle.config.cloud.ts  drizzle.config.local.ts  exploration.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.atl/: .skill-registry.cache.json  skill-registry.md
db/: client-cloud.ts  client-local.ts  cloud-schema.ts  schema.ts
drizzle/cloud/: 0000_young_firedrake.sql
drizzle/local/: 0000_aberrant_hemingway.sql  0001_overjoyed_wonder_man.sql
openspec/: config.yaml
scripts/: inspect_db.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activation.rs  lib.rs  main.rs  pdf.rs  printer.rs  sync.rs
src/__tests__/: App.test.tsx  LoginPage.test.tsx  UserManagementPage.test.tsx  admin.test.tsx  app-dashboard.test.tsx  auth.test.ts  barcode-scan.test.tsx  brand-components.test.tsx  brands.test.ts  cart.test.ts  cash-closing.test.ts  combo-cart.test.ts  combo-integration.test.ts  combos.test.ts  dashboard.test.tsx  expenses.test.ts  invoices.test.ts  keyboard-shortcuts.test.tsx  mixed-payment.test.tsx  navigation-bar.test.tsx  pedidos.test.ts  plantillas-schema.test.ts  plantillas-store.test.ts  product-cost-brand.test.tsx  products.test.ts  proveedores.test.ts  quantity-edit.test.tsx  render-template.test.ts  stats.test.ts  store-dashboard.test.ts  sync-integration.test.ts  usePermission.test.ts
src/components/: AdminRoute.tsx  BrandFilter.tsx  (+42 more)
(+111 files in other folders)
